@@ -1,3 +1,13 @@
+2011-03-31  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [chromium] update the rebaseline tool to know about pngs with checksums
+        https://bugs.webkit.org/show_bug.cgi?id=57481
+
+        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py: Skip over .checksum files if the checksum is already in the png
+        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests_unittest.py:
+
 2011-04-01  Adam Roben  <aroben@apple.com>
 
         Retrieve revision numbers from the build's got_revision property in Leaks Viewer
